<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PCRescuroid</string>
    <string name="mount">Mount</string>
    <string name="unmount">Unmount</string>
    <string name="required_intent">ISOファイルが指定されていません。</string>
    <string name="service_name">サービス</string>
    <string name="file_name">ファイル名</string>
    <string name="file_size">サイズ(MB)</string>
    
    <string name="file_choose">別のファイルを選択</string>
    
    <string name="local_file_choose">SDカードのファイルを選択</string>
    <string name="dropbox_file_choose">DropBoxのファイルを選択</string>
    
    <string name="sd_choose">SDカード</string>
    <string name="iso_choose">ISOイメージ</string>
</resources>